--- a/userbase/src/main/resources/application.properties
+++ b/userbase/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:h2:mem:test
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
+spring.sql.init.mode=embedded
+
