--- a/userbase/src/main/resources/application.properties
+++ b/userbase/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.datasource.url=jdbc:h2:mem:test
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.schema.internal.script.MultiLineSqlScriptExtractor
+spring.jpa.properties.hibernate.hbm2ddl.import_files=users.sql, addresses.sql
 
 
