--- a/userbase/src/main/resources/application.properties
+++ b/userbase/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:h2:mem:test
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.schema.internal.script.MultiLineSqlScriptExtractor
+spring.sql.init.data-locations=classpath:users.sql, classpath:addresses.sql
