--- a/mysql/src/main/resources/application.properties
+++ b/mysql/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
